[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lymphaclustering"
version = "1.0.0"
description = "API for clustering WSI slides using ResNet50 and LanceDB"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "chan chi wai", email = "your.email@example.com"}
]
keywords = ["histology", "clustering", "machine-learning", "fastapi", "lancedb"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

dependencies = [
    # NOTE: TF 2.20.0 does not exist yet. Using >=2.17.0 to support NumPy 2.0
    "tensorflow>=2.17.0", 
    "numpy>=1.26.0,<2.0.0",
    "Pillow>=10.4.0",
    
    # --- Core Scientific Computing ---
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    
    # --- Vector Database ---
    "lancedb>=0.25.3",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.0",
    
    # --- API Framework ---
    "fastapi>=0.110.2",
    "uvicorn[standard]==0.38.0",
    "python-multipart==0.0.20",

    # ---- Torch with CUDA (Optional/Commented) ----
    # "timm==0.9.8",
    # "torch==2.8.0",
    # "torchvision==0.23.0",
    # "torchaudio==2.8.0",

    # --- Environment & Utilities ---
    "python-dotenv>=1.0.0",
]

[project.scripts]
# FIXED: Points to the function 'start_server', not the object 'app'
histology-api = "lymphaclustering.app:start_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["db*", "data*", "tests*", "test*", "docs*", "doc*", "examples*"] 

# UV package manager configuration for China mirrors
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = [
    "https://mirrors.aliyun.com/pypi/simple",
    "https://pypi.org/simple"
]

[tool.black]
line-length = 120
target-version = ["py312"]